# hepytorch

./: LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
examples/: INN_v4_e4_a6.ipynb  JetMatcher.ipynb  MassEstimatorUsingAllInfo.ipynb  MassEstimatorUsingFullyConnectedNN.ipynb  linear_regression.ipynb  mass_estimation_cnnfcff.ipynb  mass_estimation_enhanced_regression.ipynb  mass_estimation_resconv.ipynb  mass_estimation_resfcff.ipynb  run_inn_v4_e4_ab.py
examples/data/: linear_regression_data.csv
examples/recipes/: inn_v4_e4_a6_10k.json  inn_v4_e4_a6_1M.json  jet_matcher.json  linear_regression.json  mass_estimator_all.json  mass_estimator_cnnfcff.json  mass_estimator_enhanced_regression.json  mass_estimator_fcff.json  mass_estimator_rescnn.json  mass_estimator_resfcff.json  simple_mass_estimator.json
hepytorch/: __init__.py  hepytorch.py  model_factory.py
hepytorch/dataloaders/: __init__.py  abs_dataloader.py  csv_loader.py
hepytorch/factories/: __init__.py  abs_factory.py  dataloader_factory.py  lossfn_factory.py  model_factory.py  optimizer_factory.py  preprocessor_factory.py  trainer_factory.py  utils.py
hepytorch/loss_functions/: __init__.py  abs_lossfn.py  bce.py  custom_weighted_mse_loss.py  loss_v4_e4_a6.py  mse.py
hepytorch/models/: __init__.py  binary_classification.py  cnnfcff.py  enhanced_regression.py  fcff.py  inn_v4_e4_a6.py  liner_regression.py  residual_cnn.py  residual_fcff.py  simple_neural_network.py
hepytorch/optimizers/: __init__.py  abs_optimizer.py  adam.py  opt_v4_e4_a6.py  (+1 more)
tests/: test_jet_swapper.py
(+21 files in other folders)
