[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hepytorch"
description = "A nice pytorch framework for hep"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [{ name = "Hyunsoo Kim" },{ name = "Wonqook Choi" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Phisics",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Issue tracker" = "https://github.com/qooksgit/hepytorch/issues"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
